Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6.5
Description
origin/10.6 4690442411b75ea0fc1a6aacabe767d6fb1d1f62 2021-09-02T17:17:18+03:00
|
|
# 2021-09-03T15:40:52 [2887877] | [rr 2891843 1869221]2021-09-03 15:15:44 0x150317ab3700[rr 2891843 1869224] InnoDB: Assertion failure in file /data/Server/10.6A/storage/innobase/dict/dict0load.cc line 2126
|
# 2021-09-03T15:40:52 [2887877] | [rr 2891843 1869226]InnoDB: Failing assertion: DICT_TF_HAS_DATA_DIR(table->flags)
|
...
|
Query (0x62b000173238): CREATE OR REPLACE TABLE F LIKE `t3`
|
# 2021-09-03T15:40:52 [2887877] | Connection ID (thread ID): 23
|
# 2021-09-03T15:40:52 [2887877] | [rr 2891843 1899510]Status: KILL_TIMEOUT
|
|
pluto:/data/Results/1630674257/TBR-1165/dev/shm/vardir/1630674257/117/1/rr
|
(rr) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x00007f7b9ef94859 in __GI_abort () at abort.c:79
|
#2 0x0000558dd7ef98b9 in ut_dbg_assertion_failed (expr=0x558dd912ca80 "DICT_TF_HAS_DATA_DIR(table->flags)", file=0x558dd9129e00 "/data/Server/10.6A/storage/innobase/dict/dict0load.cc", line=2126)
|
at /data/Server/10.6A/storage/innobase/ut/ut0dbg.cc:60
|
#3 0x0000558dd8077fad in dict_save_data_dir_path (table=0x6180000e1908, filepath=0x60200002a1f0 "./test/t3.ibd") at /data/Server/10.6A/storage/innobase/dict/dict0load.cc:2126
|
#4 0x0000558dd807858c in dict_get_and_save_data_dir_path (table=0x6180000e1908, dict_locked=false) at /data/Server/10.6A/storage/innobase/dict/dict0load.cc:2163
|
#5 0x0000558dd7a25577 in ha_innobase::update_create_info (this=0x61d000983ab8, create_info=0x150317aaf240) at /data/Server/10.6A/storage/innobase/handler/ha_innodb.cc:11378
|
#6 0x0000558dd6bbd4b3 in mysql_prepare_alter_table (thd=0x62b00016c218, table=0x619003314e98, create_info=0x150317aaf240, alter_info=0x150317aaf110, alter_ctx=0x150317aaf510) at /data/Server/10.6A/sql/sql_table.cc:8555
|
#7 0x0000558dd6ba528b in mysql_create_like_table (thd=0x62b00016c218, table=0x62b0001733b8, src_table=0x62b000173b10, create_info=0x150317ab0d20) at /data/Server/10.6A/sql/sql_table.cc:5121
|
#8 0x0000558dd6bd2b67 in Sql_cmd_create_table_like::execute (this=0x62b000173330, thd=0x62b00016c218) at /data/Server/10.6A/sql/sql_table.cc:11753
|
#9 0x0000558dd6959942 in mysql_execute_command (thd=0x62b00016c218, is_called_from_prepared_stmt=false) at /data/Server/10.6A/sql/sql_parse.cc:5997
|
#10 0x0000558dd6965e14 in mysql_parse (thd=0x62b00016c218, rawbuf=0x62b000173238 "CREATE OR REPLACE TABLE F LIKE `t3` /* E_R Thread10 QNO 15 CON_ID 23 */", length=71, parser_state=0x150317ab1b20) at /data/Server/10.6A/sql/sql_parse.cc:8030
|
#11 0x0000558dd693e07f in dispatch_command (command=COM_QUERY, thd=0x62b00016c218, packet=0x6290002d0219 "CREATE OR REPLACE TABLE F LIKE `t3` /* E_R Thread10 QNO 15 CON_ID 23 */ ", packet_length=72, blocking=true)
|
at /data/Server/10.6A/sql/sql_parse.cc:1896
|
#12 0x0000558dd693b457 in do_command (thd=0x62b00016c218, blocking=true) at /data/Server/10.6A/sql/sql_parse.cc:1404
|
#13 0x0000558dd6d3a81a in do_handle_one_connection (connect=0x608000003638, put_in_cache=true) at /data/Server/10.6A/sql/sql_connect.cc:1418
|
#14 0x0000558dd6d3a0a6 in handle_one_connection (arg=0x608000003638) at /data/Server/10.6A/sql/sql_connect.cc:1312
|
#15 0x0000648e56d41609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#16 0x00007f7b9f091293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
(rr) quit
|
|
RQG
|
===
|
git clone https://github.com/mleich1/rqg --branch experimental RQG
|
|
perl rqg.pl \
|
--grammar=conf/mariadb/innodb_compression_encryption.yy \
|
--gendata=conf/mariadb/innodb_compression_encryption.zz \
|
--max_gd_duration=1800 \
|
--mysqld=--loose-innodb_encryption_rotate_key_age=2 \
|
--mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
|
--mysqld=--loose-idle_write_transaction_timeout=0 \
|
--mysqld=--loose-idle_transaction_timeout=0 \
|
--mysqld=--loose-idle_readonly_transaction_timeout=0 \
|
--mysqld=--connect_timeout=60 \
|
--mysqld=--interactive_timeout=28800 \
|
--mysqld=--slave_net_timeout=60 \
|
--mysqld=--net_read_timeout=30 \
|
--mysqld=--net_write_timeout=60 \
|
--mysqld=--loose-table_lock_wait_timeout=50 \
|
--mysqld=--wait_timeout=28800 \
|
--mysqld=--lock-wait-timeout=86400 \
|
--mysqld=--innodb-lock-wait-timeout=50 \
|
--no-mask \
|
--queries=10000000 \
|
--seed=random \
|
--reporters=Backtrace \
|
--reporters=ErrorLog \
|
--reporters=Deadlock1 \
|
--validators=None \
|
--mysqld=--log_output=none \
|
--mysqld=--log_bin_trust_function_creators=1 \
|
--mysqld=--loose-debug_assert_on_not_freed_memory=0 \
|
--engine=InnoDB \
|
--restart_timeout=240 \
|
--mysqld=--plugin-load-add=file_key_management.so \
|
--mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
|
--duration=300 \
|
--mysqld=--loose-innodb_fatal_semaphore_wait_threshold=300 \
|
--mysqld=--loose-innodb-sync-debug \
|
--mysqld=--innodb_stats_persistent=off \
|
--mysqld=--innodb_adaptive_hash_index=on \
|
--mysqld=--loose-innodb_evict_tables_on_commit_debug=off \
|
--mysqld=--loose-max-statement-time=30 \
|
--threads=33 \
|
--mysqld=--innodb-use-native-aio=0 \
|
--rr=Extended \
|
--rr_options=--chaos --wait \
|
--mysqld=--innodb_page_size=4K \
|
--mysqld=--innodb-buffer-pool-size=256M \
|
--no_mask \
|
--workdir=<local settings> \
|
--vardir=<local settings> \
|
--mtr-build-thread=<local settings> \
|
--basedir1=<local settings> \
|
--script_debug=_nix
|
|
Attachments
Issue Links
- is caused by
-
MDEV-24258 Merge dict_sys.mutex into dict_sys.latch
-
- Closed
-
- is duplicated by
-
MDEV-28305 Innodb assertion - DICT_TF_HAS_DATA_DIR(table->flags) (was: Falha ao tentar iniciar serviço)
-
- Closed
-