MDEV-26551 InnoDB crash on multiple concurrent SHOW TABLE STATUS

dict_get_and_save_data_dir_path(): Protect the operation with
dict_table_t::lock_mutex and avoid unnecessary memory allocation.